--- a/ExpressJS-Fundamentals/ShopStop/views/home/index.html
+++ b/ExpressJS-Fundamentals/ShopStop/views/home/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>ShopStop</title>
     <link rel="shortcut icon" type="image/png" href="../../content/images/favicon.ico"/>
-    <link rel="stylesheet" href="../../content/styles/site.css">
+    <link rel="stylesheet" href="../../content/styles/site.min.css">
 </head>
 <body>
 <header>
