--- a/ExpressJS-Fundamentals/ShopStop/views/products/add.html
+++ b/ExpressJS-Fundamentals/ShopStop/views/products/add.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>ShopStop</title>
     <link rel="shortcut icon" type="image/png" href="../../content/images/favicon.ico"/>
-    <link rel="stylesheet" href="../../content/styles/site.css">
+    <link rel="stylesheet" href="../../content/styles/site.min.css">
 </head>
 <body>
 <header>
@@ -20,7 +20,7 @@
 </header>
 <main>
     <h1>Add Product</h1>
-    <form class="form center-form" method="post">
+    <form class="form center-form" method="post" enctype="multipart/form-data">
         <div class="form-group">
             <label for="name">Name</label>
             <input id="name" name="name" type="text" class="input-field" />
@@ -40,7 +40,7 @@
 
         <div class="form-group">
             <label for="image">Image</label>
-            <input id="image" name="image" type="text" class="input-field" />
+            <input id="image" name="image" type="file" class="input-field"  accept=".jpg,.png,.jpeg"/>
         </div>
 
         <div class="form-group">
