--- a/ExpressJS-Fundamentals/ExerciseNodeMovieDB/views/status.html
+++ b/ExpressJS-Fundamentals/ExerciseNodeMovieDB/views/status.html
@@ -4,25 +4,26 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
-    <link rel="stylesheet" type="text/css" href="/public/css/main.css" />
+    <link rel="stylesheet" type="text/css" href="/public/css/main.css"/>
+    <link rel="shortcut icon" type="image/png" href="/public/images/favicon.ico"/>
 </head>
 
 <body>
 
-    <header>
-        <div class="inner">
-            <nav>
-                <a href="/" class="logo"><img class="logo" src="/public/images/nodeLogo.png" alt="nodeLogo"></a>
-                <input type="checkbox" id="nav" /><label for="nav"></label>
-                <ul>
-                    <li><a href="/addMovie">Add Movie</a></li>
-                    <li><a href="/viewAllMovies">View All Movies</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
+<header>
+    <div class="inner">
+        <nav>
+            <a href="/" class="logo"><img class="logo" src="/public/images/nodeLogo.png" alt="nodeLogo"></a>
+            <input type="checkbox" id="nav"/><label for="nav"></label>
+            <ul>
+                <li><a href="/addMovie">Add Movie</a></li>
+                <li><a href="/viewAllMovies">View All Movies</a></li>
+            </ul>
+        </nav>
+    </div>
+</header>
 
-    <h1>{{replaceMe}}</h1>
+<h1>{{replaceMe}}</h1>
 </body>
 
 </html>
