--- a/ExpressJS-Fundamentals/ShopStop/views/products/add.html
+++ b/ExpressJS-Fundamentals/ShopStop/views/products/add.html
@@ -15,6 +15,7 @@
         <ul>
             <li><a href="/">Home Page</a></li>
             <li><a href="/product/add">Add Product</a></li>
+            <li><a href="/category/add">Add Category</a></li>
         </ul>
     </nav>
 </header>
@@ -44,8 +45,14 @@
         </div>
 
         <div class="form-group">
+            <label for="group">Group</label>
+            {categories}
+        </div>
+
+        <div class="form-group">
             <input class="btn form-btn" type="submit" class="btn" value="Add">
         </div>
+
     </form>
 
 </main>
