--- a/ExpressJS-Fundamentals/PersistenceExercise/MongoPlayground/views/index.html
+++ b/ExpressJS-Fundamentals/PersistenceExercise/MongoPlayground/views/index.html
@@ -42,7 +42,7 @@
         <fieldset>
             <legend>Search:</legend>
             Tag name:<br>
-            <input type="text" name="tagName" value="Write tags separted by ,"><br> Posted after:<br>
+            <input type="text" name="tagName" placeholder="Write tags separted by ,"><br> Posted after:<br>
             <input type="date" name="afterDate"><br> Posted before:<br>
             <input type="date" name="beforeDate"><br>
             Limit:<br>
