Added image upload and search controller

--- a/ExpressJS-Fundamentals/CarRentalExercise/views/car/add.hbs
+++ b/ExpressJS-Fundamentals/CarRentalExercise/views/car/add.hbs
@@ -1,8 +1,8 @@
-<form class="car-form" action="/car/add" method="POST">
+<form class="car-form" action="/car/add" method="POST" enctype="multipart/form-data">
     <label for="carModel">Model:</label>
     <input class="input-field" type="text" id="carModel" name="model" value="{{model}}" />
     <label for="image">Image:</label>
-    <input class="input-field" type="url" name="image" id="image" value="{{image}}" />
+    <input id="image" name="image" type="file" class="input-field" accept=".jpg,.png,.jpeg"/>
     <label for="pricePerDay">Price per Day:</label>
     <input class="input-field" type="number" name="pricePerDay" id="pricePerDay" value="{{pricePerDay}}" />
     <input class="submit-btn" type="submit" value="Add Car" />
