--- a/ExpressJS-Fundamentals/CarRentalExercise/views/home/index.hbs
+++ b/ExpressJS-Fundamentals/CarRentalExercise/views/home/index.hbs
@@ -1,3 +1,8 @@
 <section id="home">
-    <h1>Welcome to our Car Renting System Web-App!</h1>
+    <div class="bg">
+        <div class="bg-text">
+            <h1>Rent exclusive car</h1>
+            <p>FOR YOUR SPECIAL OCCASION!</p>
+        </div>
+    </div>
 </section>
