--- a/ExpressJS-Fundamentals/CarRentalExercise/views/layouts/main.hbs
+++ b/ExpressJS-Fundamentals/CarRentalExercise/views/layouts/main.hbs
@@ -7,66 +7,73 @@
     <title>Car Renting System</title>
     <link href="/css/style.css" type="text/css" rel="stylesheet">
     <link href="favicon.ico" type="image/x-icon">
+    <link type="text/css" rel="stylesheet"
+          href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Google+Sans">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+          integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+            integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+            crossorigin="anonymous"></script>
 </head>
 
 <html>
 
 <body>
-    <header>
-        <nav>
-            <ul>
-                <li class="align-left first">
-                    <a href="/">Home</a>
-                </li>
-                <li class="align-left">
-                    <a href="/car/all">View Avaliable Cars</a>
-                </li>
-                {{#if user}}
+<header>
+    <nav>
+        <ul>
+            <li class="align-left first">
+                <a href="/">Home</a>
+            </li>
+            <li class="align-left">
+                <a href="/car/all">View Avaliable Cars</a>
+            </li>
+            {{#if user}}
                 <li class="align-left">
                     <a href="/user/rents">My Rented Cars</a>
                 </li>
-                {{/if}} {{#if isAdmin}}
-                <li class="align-left">
-                    <a href="/car/add">Add Car</a>
-                </li>
-                {{/if}} {{#if user}}
-                <li class="align-right">
-                    <form id="logout-form" action="/user/logout" method="POST">
-                        <a href="javascript:document.getElementById('logout-form').submit()">Logout</a>
-                    </form>
-                </li>
-                <li class="align-right">
-                    <span>Hello, {{user.username}}</span>
-                </li>
-                {{else}}
-                <li class="align-right">
-                    <a href="/user/register">Register</a>
-                </li>
-                <li class="align-right">
-                    <a href="/user/login">Login</a>
-                </li>
-                {{/if}}
-            </ul>
-        </nav>
-    </header>
+            {{/if}} {{#if isAdmin}}
+            <li class="align-left">
+                <a href="/car/add">Add Car</a>
+            </li>
+        {{/if}} {{#if user}}
+            <li class="align-right">
+                <form id="logout-form" action="/user/logout" method="POST">
+                    <a href="javascript:document.getElementById('logout-form').submit()">Logout</a>
+                </form>
+            </li>
+            <li class="align-right">
+                <span>Hello, {{user.username}}</span>
+            </li>
+        {{else}}
+            <li class="align-right">
+                <a href="/user/register">Register</a>
+            </li>
+            <li class="align-right">
+                <a href="/user/login">Login</a>
+            </li>
+        {{/if}}
+        </ul>
+    </nav>
+</header>
 
-    <main>
-        {{#if success}}
+<main>
+    {{#if success}}
         <div id="successBox">
             <h2>{{success}}</h2>
         </div>
-        {{/if}}
+    {{/if}}
 
-        {{#if error}}
+    {{#if error}}
         <div id="errorBox">
             <h2>{{error}}</h2>
         </div>
-        {{/if}} {{{body}}}
-    </main>
+    {{/if}} {{{body}}}
+</main>
 
-    <footer>
-        <p>&copy; 2018 Rent A Car Service Ltd. All Rights Reserved</p>
-    </footer>
+<footer>
+    <p>&copy; 2018 Rent A Car Service Ltd. All Rights Reserved</p>
+</footer>
 </body>
 
 </html>
