--- a/ExpressJS-Fundamentals/CarRentalExercise/static/css/style.css
+++ b/ExpressJS-Fundamentals/CarRentalExercise/static/css/style.css
@@ -304,7 +304,6 @@ span.rented {
 
 form#register-form,
 form#login-form,
-form#search-form,
 form.car-form,
 form#rent-form {
     padding: 10px;
@@ -321,6 +320,33 @@ input {
     text-align: center;
     transition: 0.1s all ease-in-out;
     color: #607D8B;
+}
+
+/* enable absolute positioning */
+.inner-addon {
+    position: relative;
+}
+
+/* style icon */
+.inner-addon .fas {
+    position: absolute;
+    padding: 10px;
+    pointer-events: none;
+    color: #23393D;
+}
+
+.right-addon .fas { right: 0px;}
+
+/* add padding  */
+.right-addon input {
+    padding-right: 30px;
+    text-align: left;
+    border: none;
+}
+
+.right-addon input:focus {
+    border: none;
+    padding-bottom: 6px;
 }
 
 a.rent-btn,
