--- a/ExpressJS-Fundamentals/CarRentalExercise/views/layouts/main.hbs
+++ b/ExpressJS-Fundamentals/CarRentalExercise/views/layouts/main.hbs
@@ -14,6 +14,8 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
             integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
             crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css"
+          integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
 </head>
 
 <html>
@@ -53,6 +55,12 @@
                 <a href="/user/login">Login</a>
             </li>
         {{/if}}
+            <li>
+                <form class="inner-addon right-addon" action="/search">
+                    <i class="fas fa-search"></i>
+                    <input type="text" name="model" placeholder="Search" class="form-control">
+                </form>
+            </li>
         </ul>
     </nav>
 </header>
