Completed exam prep lab but no notifications

--- a/ExpressJS-Fundamentals/ExamPreparation-01/views/home/index.hbs
+++ b/ExpressJS-Fundamentals/ExamPreparation-01/views/home/index.hbs
@@ -8,3 +8,17 @@
         </div>
     </form>
 {{/if}}
+{{#if isAdmin}}
+<h1>Threads</h1>
+    {{#each threads}}
+    <div class="threads-list">
+        <div class="thread">
+            <form action="/threads/remove/{{id}}" method="POST">
+                <h4>{{users}}</h4>
+                <p>{{createdOn}}</p>
+                <button class="btn">Delete</button>
+            </form>
+        </div>
+    </div>
+    {{/each}}
+{{/if}}
