--- a/ExpressJS-Fundamentals/ExamPreparation-01/views/thread/chatroom.hbs
+++ b/ExpressJS-Fundamentals/ExamPreparation-01/views/thread/chatroom.hbs
@@ -1,7 +1,14 @@
-<h1>Chatroom with {{otherUserNickname}}</h1>
-<form method="post" class="chat-form" action="/block/{{otherUser.nickname}}">
+<h1>Chatroom with {{otherUserUsername}}</h1>
+{{#if isBlocked}}
+<form method="post" class="chat-form" action="/unblock/{{otherUserUsername}}">
+    <button class="btn btn-success">Unblock</button>
+</form>
+{{else}}
+<form method="post" class="chat-form" action="/block/{{otherUserUsername}}">
     <button class="btn btn-danger">Block</button>
 </form>
+{{/if}}
+
 <div class="chat-wrapper">
     <div id="message-wrapper">
         {{#each messages}}
@@ -29,15 +36,19 @@
         {{/if}}
 
         {{/each}}
-
-
-
-        
-
     </div>
+    {{#if disableChat}}
+    <form method="" class="chat-form">
+        <textarea rows="5" name="message" placeholder="message" disabled></textarea>
+        <input value="5c540d5fac257e190c076fc0" name="threadId" hidden />
+        <button class="btn btn-primary send">Send</button>
+    </form>
+    {{else}}
     <form method="post" class="chat-form">
         <textarea rows="5" name="message" placeholder="message"></textarea>
         <input value="5c540d5fac257e190c076fc0" name="threadId" hidden />
         <button class="btn btn-primary send">Send</button>
     </form>
+    {{/if}}
+    
 </div>
