--- a/ExpressJS-Fundamentals/ExamPreparation-01/views/layouts/main.hbs
+++ b/ExpressJS-Fundamentals/ExamPreparation-01/views/layouts/main.hbs
@@ -30,6 +30,11 @@
             {{/if}}
         </ul>
     </div>
+    {{#if globalError}}
+        <div class="error">
+            {{globalError}}
+        </div>
+    {{/if}}
     {{{body}}}
 </body>
 
