--- a/ReactJS-Fundamentals/EventsAndForms/src/index.css
+++ b/ReactJS-Fundamentals/EventsAndForms/src/index.css
@@ -1,14 +1,71 @@
 body {
+  background-color: #ccc;
+  font-family: sans-serif;
   margin: 0;
   padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+#root {
+  position: relative;
+  text-align: center;
+}
+
+.pokemons {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.pokemons__item {
+  display: inline-flex;
+  margin: 10px;
+}
+
+.pokemon {
+  position: relative;
+  z-index: 20000;
+  overflow: hidden;
+  background-color: #eee;
+  cursor: pointer;
+}
+
+.pokemon__sprite {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 10;
+  border: none;
+  background-color: transparent;
+  background-position: center center;
+  background-repeat: no-repeat;
+}
+
+.pokemon,
+.pokemon__sprite {
+  width: 140px;
+  height: 140px;
+}
+
+.pokemon__name {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 20;
+  margin: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  color: #fff;
+  text-align: center;
+  font-size: 14px;
+  pointer-events: none;
+}
+
+@media (min-width: 992px) {
+  .pokemon,
+  .pokemon__sprite {
+    width: 160px;
+    height: 160px;
+  }
 }
