--- a/ReactJS-Fundamentals/HOCExercise/src/App.css
+++ b/ReactJS-Fundamentals/HOCExercise/src/App.css
@@ -3,6 +3,10 @@
   margin: 0;
 }
 
+.redirect{
+  margin: 10px;
+}
+
 body {
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   width: 800px;
