--- a/Angular-Fundamentals/MoviesDB/movies-finder/src/app/movies/movies.component.html
+++ b/Angular-Fundamentals/MoviesDB/movies-finder/src/app/movies/movies.component.html
@@ -1,21 +1,9 @@
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-  <a class="navbar-brand" href="#">Movie Finder</a>
+  <a class="navbar-brand" [routerLink]="['']">Movie Finder</a>
 </nav>
 
 <main role="main">
-  <div class="jumbotron">
-    <div class="container">
-      <h1 class="display-3">Browse Our Movies!</h1>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-        magna
-        aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-        consequat.
-        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur
-        sint
-        occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-      <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more »</a></p>
-    </div>
-  </div>
+  <app-landing></app-landing>
   <div class="panel panel-default">
     <div class="panel-heading">
       <h3 class="panel-title">Popular Movies</h3>
@@ -38,6 +26,36 @@
     <div class="panel-body">
       <div class="row">
         <div class="col-md-2" *ngFor="let movie of theaters$">
+          <div>
+            <app-movie-info [movie-info]="movie"></app-movie-info>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="panel panel-default">
+    <div class="panel-heading">
+      <h3 class="panel-title">Kids Favorites</h3>
+    </div>
+    <div class="panel-body">
+      <div class="row">
+        <div class="col-md-2" *ngFor="let movie of kids$">
+          <div>
+            <app-movie-info [movie-info]="movie"></app-movie-info>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="panel panel-default">
+    <div class="panel-heading">
+      <h3 class="panel-title">Best Drama This Year</h3>
+    </div>
+    <div class="panel-body">
+      <div class="row">
+        <div class="col-md-2" *ngFor="let movie of drama$">
           <div>
             <app-movie-info [movie-info]="movie"></app-movie-info>
           </div>
