--- a/Angular-Fundamentals/FurnitureSystem/furniture-system/src/app/nav/nav.component.html
+++ b/Angular-Fundamentals/FurnitureSystem/furniture-system/src/app/nav/nav.component.html
@@ -6,10 +6,10 @@
       <li class="nav-item">
         <a class="nav-link" routerLink="/" routerLinkActive="active">Home</a>
       </li>
-      <li class="nav-item">
+      <li class="nav-item" *ngIf="!authService.isLoggedIn">
         <a class="nav-link" routerLink="/create" routerLinkActive="active">Create Furniture</a>
       </li>
-      <li class="nav-item">
+      <li class="nav-item" *ngIf="!authService.isLoggedIn">
         <a class="nav-link" routerLink="/user/furniture" routerLinkActive="active">My Furniture</a>
       </li>
       <li class="nav-item">
