--- a/Angular-Fundamentals/FurnitureSystem/furniture-system/src/app/user-furniture/user-furniture.component.html
+++ b/Angular-Fundamentals/FurnitureSystem/furniture-system/src/app/user-furniture/user-furniture.component.html
@@ -17,7 +17,7 @@
             </footer>
             <div class="pull-right">
               <a routerLink="/furniture/details/{{furniture._id}}" class="btn btn-info">Details</a>
-              <a href=”#” class="btn btn-danger">Delete Item</a>
+              <a routerLink="/furniture/delete/{{furniture._id}}" class="btn btn-danger">Delete Item</a>
             </div>
           </blockquote>
         </div>
