--- a/Angular-Fundamentals/RefactoringWorkshop/src/app/app.component.html
+++ b/Angular-Fundamentals/RefactoringWorkshop/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div id="container">
-  <app-header [isLoggedIn]="isLoggedIn" [username]="username" (logoutEmitter)="logout()"></app-header>
+  <app-header [isLoggedIn]="isLoggedIn" [username]="username"></app-header>
   <app-content [isLoggedIn]="isLoggedIn"></app-content>
-  <app-footer [date]="date"></app-footer>
+  <app-footer></app-footer>
 </div>
